# nix-query

./: Cargo.toml  README.md  default.nix
src/: cache.rs  lib.rs  main.rs  nix.rs  proc.rs
test_data/: acpitool.json  attrs_unfiltered.txt  gcc.json  gzip.json  spotify.json  tern.json
