[package]
name = "nix-query"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.8"
skim = "0.7.0"
