[package]
name = "nix-query"
version = "1.0.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
description = "A cached fuzzy searcher for Nix packages"
repository = "https://github.com/9999years/nix-query/"
keywords = ["NixOS", "Nix", "fuzzy search", "package managment", "tui"]
categories = ["command-line-utilities"]
license = "AGPL-3.0-or-later"
edition = "2018"

[lib]
name = "nix_query"
path = "src/lib.rs"

[[bin]]
name = "nix-query"
path = "src/main.rs"

[dependencies]
dirs = "2.0.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.8"
skim = "0.7.0"
colored = "1.9.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
