[package]
name = "nix-query"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

[lib]
name = "nix_query"
path = "src/lib.rs"

[[bin]]
name = "nix-query"
path = "src/main.rs"

[dependencies]
dirs = "2.0.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.8"
skim = "0.7.0"
regex = "1.3.4"
console = "0.9.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
